ML4D/Compiler/gen/ML4DParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Dion/source/repos/p4/ML4D/Grammar\ML4D.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class ML4DParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, VOID=2, DOUBLE=3, INT=4, BOOL=5, TENSOR=6, NOT=7, POW=8, MUL=9, 
		DIV=10, PLUS=11, MINUS=12, EQUALS=13, NOTEQUALS=14, GTHAN=15, LTHAN=16, 
		GETHAN=17, LETHAN=18, AND=19, OR=20, ASSIGN=21, LPAREN=22, RPAREN=23, 
		LBRACE=24, RBRACE=25, LBRACK=26, RBRACK=27, COMMA=28, SEMICOLON=29, IF=30, 
		ELSE=31, WHILE=32, FOR=33, RETURN=34, GRADIENTS=35, WS=36, BOOLVAL=37, 
		INUM=38, FNUM=39, ID=40, BLOCKCOMMENT=41, LINECOMMENT=42;
	public const int
		RULE_lines = 0, RULE_dcl = 1, RULE_tensor_init = 2, RULE_stmt = 3, RULE_assign_expr = 4, 
		RULE_bool_expr = 5, RULE_expr = 6, RULE_types = 7;
	public static readonly string[] ruleNames = {
		"lines", "dcl", "tensor_init", "stmt", "assign_expr", "bool_expr", "expr", 
		"types"
	};

	private static readonly string[] _LiteralNames = {
		null, "'<<'", "'void'", "'double'", "'int'", "'bool'", "'tensor'", "'not'", 
		"'**'", "'*'", "'/'", "'+'", "'-'", "'=='", "'!='", "'>'", "'<'", "'>='", 
		"'<='", "'and'", "'or'", "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", 
		"','", "';'", "'if'", "'else'", "'while'", "'for'", "'return'", "'gradients'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "VOID", "DOUBLE", "INT", "BOOL", "TENSOR", "NOT", "POW", "MUL", 
		"DIV", "PLUS", "MINUS", "EQUALS", "NOTEQUALS", "GTHAN", "LTHAN", "GETHAN", 
		"LETHAN", "AND", "OR", "ASSIGN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
		"LBRACK", "RBRACK", "COMMA", "SEMICOLON", "IF", "ELSE", "WHILE", "FOR", 
		"RETURN", "GRADIENTS", "WS", "BOOLVAL", "INUM", "FNUM", "ID", "BLOCKCOMMENT", 
		"LINECOMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ML4D.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ML4DParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ML4DParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ML4DParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class LinesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DclContext[] dcl() {
			return GetRuleContexts<DclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DclContext dcl(int i) {
			return GetRuleContext<DclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ML4DParser.Eof, 0); }
		public LinesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lines; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IML4DListener typedListener = listener as IML4DListener;
			if (typedListener != null) typedListener.EnterLines(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IML4DListener typedListener = listener as IML4DListener;
			if (typedListener != null) typedListener.ExitLines(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IML4DVisitor<TResult> typedVisitor = visitor as IML4DVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLines(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LinesContext lines() {
		LinesContext _localctx = new LinesContext(Context, State);
		EnterRule(_localctx, 0, RULE_lines);
		int _la;
		try {
			State = 23;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case VOID:
			case DOUBLE:
			case INT:
			case BOOL:
			case TENSOR:
			case IF:
			case WHILE:
			case FOR:
			case RETURN:
			case GRADIENTS:
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 18;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					State = 18;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case VOID:
					case DOUBLE:
					case INT:
					case BOOL:
					case TENSOR:
						{
						State = 16;
						dcl();
						}
						break;
					case IF:
					case WHILE:
					case FOR:
					case RETURN:
					case GRADIENTS:
					case ID:
						{
						State = 17;
						stmt();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					State = 20;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << DOUBLE) | (1L << INT) | (1L << BOOL) | (1L << TENSOR) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << RETURN) | (1L << GRADIENTS) | (1L << ID))) != 0) );
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				State = 22;
				Match(Eof);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DclContext : ParserRuleContext {
		public DclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dcl; } }
	 
		public DclContext() { }
		public virtual void CopyFrom(DclContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class TensorDeclContext : DclContext {
		public IToken type;
		public IToken id;
		public IToken rows;
		public IToken coloumns;
		public Tensor_initContext init;
		public Bool_exprContext assignInit;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LBRACK() { return GetTokens(ML4DParser.LBRACK); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACK(int i) {
			return GetToken(ML4DParser.LBRACK, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RBRACK() { return GetTokens(ML4DParser.RBRACK); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACK(int i) {
			return GetToken(ML4DParser.RBRACK, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(ML4DParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(ML4DParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TENSOR() { return GetToken(ML4DParser.TENSOR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(ML4DParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] INUM() { return GetTokens(ML4DParser.INUM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INUM(int i) {
			return GetToken(ML4DParser.INUM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Tensor_initContext tensor_init() {
			return GetRuleContext<Tensor_initContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Bool_exprContext bool_expr() {
			return GetRuleContext<Bool_exprContext>(0);
		}
		public TensorDeclContext(DclContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IML4DListener typedListener = listener as IML4DListener;
			if (typedListener != null) typedListener.EnterTensorDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IML4DListener typedListener = listener as IML4DListener;
			if (typedListener != null) typedListener.ExitTensorDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IML4DVisitor<TResult> typedVisitor = visitor as IML4DVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTensorDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FuncDeclContext : DclContext {
		public TypesContext type;
		public IToken id;
		public TypesContext _types;
		public IList<TypesContext> _argtype = new List<TypesContext>();
		public IToken _ID;
		public IList<IToken> _argid = new List<IToken>();
		public LinesContext body;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(ML4DParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(ML4DParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(ML4DParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(ML4DParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypesContext[] types() {
			return GetRuleContexts<TypesContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypesContext types(int i) {
			return GetRuleContext<TypesContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(ML4DParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(ML4DParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LinesContext lines() {
			return GetRuleContext<LinesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(ML4DParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(ML4DParser.COMMA, i);
		}
		public FuncDeclContext(DclContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IML4DListener typedListener = listener as IML4DListener;
			if (typedListener != null) typedListener.EnterFuncDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IML4DListener typedListener = listener as IML4DListener;
			if (typedListener != null) typedListener.ExitFuncDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IML4DVisitor<TResult> typedVisitor = visitor as IML4DVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDecl(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class VarDeclContext : DclContext {
		public TypesContext type;
		public IToken id;
		public Bool_exprContext init;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASSIGN() { return GetToken(ML4DParser.ASSIGN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(ML4DParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypesContext types() {
			return GetRuleContext<TypesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(ML4DParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Bool_exprContext bool_expr() {
			return GetRuleContext<Bool_exprContext>(0);
		}
		public VarDeclContext(DclContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IML4DListener typedListener = listener as IML4DListener;
			if (typedListener != null) typedListener.EnterVarDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IML4DListener typedListener = listener as IML4DListener;
			if (typedListener != null) typedListener.ExitVarDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IML4DVisitor<TResult> typedVisitor = visitor as IML4DVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DclContext dcl() {
		DclContext _localctx = new DclContext(Context, State);
		EnterRule(_localctx, 2, RULE_dcl);
		int _la;
		try {
			State = 67;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				_localctx = new VarDeclContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 25;
				((VarDeclContext)_localctx).type = types();
				State = 26;
				((VarDeclContext)_localctx).id = Match(ID);
				State = 27;
				Match(ASSIGN);
				State = 28;
				((VarDeclContext)_localctx).init = bool_expr(0);
				State = 29;
				Match(SEMICOLON);
				}
				break;
			case 2:
				_localctx = new TensorDeclContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 31;
				((TensorDeclContext)_localctx).type = Match(TENSOR);
				State = 32;
				((TensorDeclContext)_localctx).id = Match(ID);
				State = 33;
				Match(LBRACK);
				State = 34;
				((TensorDeclContext)_localctx).rows = Match(INUM);
				State = 35;
				Match(RBRACK);
				State = 36;
				Match(LBRACK);
				State = 37;
				((TensorDeclContext)_localctx).coloumns = Match(INUM);
				State = 38;
				Match(RBRACK);
				State = 39;
				Match(ASSIGN);
				State = 42;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case LBRACE:
					{
					State = 40;
					((TensorDeclContext)_localctx).init = tensor_init();
					}
					break;
				case NOT:
				case MINUS:
				case LPAREN:
				case BOOLVAL:
				case INUM:
				case FNUM:
				case ID:
					{
					State = 41;
					((TensorDeclContext)_localctx).assignInit = bool_expr(0);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 44;
				Match(SEMICOLON);
				}
				break;
			case 3:
				_localctx = new FuncDeclContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 46;
				((FuncDeclContext)_localctx).type = types();
				State = 47;
				((FuncDeclContext)_localctx).id = Match(ID);
				State = 48;
				Match(LPAREN);
				State = 60;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << DOUBLE) | (1L << INT) | (1L << BOOL))) != 0)) {
					{
					State = 49;
					((FuncDeclContext)_localctx)._types = types();
					((FuncDeclContext)_localctx)._argtype.Add(((FuncDeclContext)_localctx)._types);
					State = 50;
					((FuncDeclContext)_localctx)._ID = Match(ID);
					((FuncDeclContext)_localctx)._argid.Add(((FuncDeclContext)_localctx)._ID);
					State = 57;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==COMMA) {
						{
						{
						State = 51;
						Match(COMMA);
						State = 52;
						((FuncDeclContext)_localctx)._types = types();
						((FuncDeclContext)_localctx)._argtype.Add(((FuncDeclContext)_localctx)._types);
						State = 53;
						((FuncDeclContext)_localctx)._ID = Match(ID);
						((FuncDeclContext)_localctx)._argid.Add(((FuncDeclContext)_localctx)._ID);
						}
						}
						State = 59;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					}
				}

				State = 62;
				Match(RPAREN);
				State = 63;
				Match(LBRACE);
				State = 64;
				((FuncDeclContext)_localctx).body = lines();
				State = 65;
				Match(RBRACE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Tensor_initContext : ParserRuleContext {
		public ExprContext _expr;
		public IList<ExprContext> _firstRow = new List<ExprContext>();
		public IList<ExprContext> _elements = new List<ExprContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(ML4DParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LBRACK() { return GetTokens(ML4DParser.LBRACK); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACK(int i) {
			return GetToken(ML4DParser.LBRACK, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RBRACK() { return GetTokens(ML4DParser.RBRACK); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACK(int i) {
			return GetToken(ML4DParser.RBRACK, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(ML4DParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(ML4DParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(ML4DParser.COMMA, i);
		}
		public Tensor_initContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tensor_init; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IML4DListener typedListener = listener as IML4DListener;
			if (typedListener != null) typedListener.EnterTensor_init(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IML4DListener typedListener = listener as IML4DListener;
			if (typedListener != null) typedListener.ExitTensor_init(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IML4DVisitor<TResult> typedVisitor = visitor as IML4DVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTensor_init(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Tensor_initContext tensor_init() {
		Tensor_initContext _localctx = new Tensor_initContext(Context, State);
		EnterRule(_localctx, 4, RULE_tensor_init);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			Match(LBRACE);
			State = 70;
			Match(LBRACK);
			State = 71;
			_localctx._expr = expr(0);
			_localctx._firstRow.Add(_localctx._expr);
			State = 76;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 72;
				Match(COMMA);
				State = 73;
				_localctx._expr = expr(0);
				_localctx._firstRow.Add(_localctx._expr);
				}
				}
				State = 78;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 79;
			Match(RBRACK);
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 80;
				Match(COMMA);
				State = 81;
				Match(LBRACK);
				State = 82;
				_localctx._expr = expr(0);
				_localctx._elements.Add(_localctx._expr);
				State = 87;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COMMA) {
					{
					{
					State = 83;
					Match(COMMA);
					State = 84;
					_localctx._expr = expr(0);
					_localctx._elements.Add(_localctx._expr);
					}
					}
					State = 89;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 90;
				Match(RBRACK);
				}
				}
				State = 96;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 97;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
